<?xml version="1.0"?>
<package format="2">
  <name>course_made_good</name>
  <version>0.0.0</version>
  <description>The course_made_good package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>marine_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>roscpp</depend>
  <depend>project11</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

